# i3status-dumb

./: Cargo.toml  README.md
src/: clock.rs  layout.rs  main.rs  status.rs  sway.rs  volume.rs
