[package]
name = "i3status-dumb"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "i3status-dumb"
path = "src/main.rs"

[dependencies]
futures-util = "0.3"
libc = "0.2"
libpulse-binding = "2"
swayipc-async = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
